# Despeect

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  workflow.md
SpeectLib/: install.sh
Test/: CMakeLists.txt  relation_name.cpp  simple_test.cpp  text_load.cpp  unit_test.cpp  voice_load.cpp
header/: DSAdapter.hpp  DSCentralWidget.hpp  DSFlowControlDockWidget.hpp  DSItem.hpp  DSListModel.hpp  DSMainWindow.hpp  DSRelListModel.hpp  DSRelation.hpp  DSRelationControlDockWidget.hpp  DSTextDockWidget.hpp  DSTreeDockWidget.hpp  DSTreeItem.hpp  DSTreeModel.hpp  VArc.hpp  VNode.hpp  VScene.hpp  arc.hpp  datanodemanager.hpp  graphmanager.hpp  id.hpp  line.hpp  node.hpp  processormanager.hpp
source/: DSAdapter.cpp  DSCentralWidget.cpp  DSFlowControlDockWidget.cpp  DSItem.cpp  DSListModel.cpp  DSMainWindow.cpp  DSRelListModel.cpp  DSRelation.cpp  DSRelationControlDockWidget.cpp  DSTreeItem.cpp  DSTreeModel.cpp  VNode.cpp  VScene.cpp  arc.cpp  datanodemanager.cpp  graphmanager.cpp  id.cpp  line.cpp  main.cpp  node.cpp  processormanager.cpp
